# mcfunction2list

./: CMakeLists.txt  README.md  build.bat  logger.hpp  main.cpp
